[package]
name = "pyo3_test_two"
version = "0.1.0"
authors = ["Ben Simms <ben@bensimms.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "async_py_rust_queue"
crate-type = ["rlib", "cdylib"]

[features]
default = ["pyo3/extension-module"]

[dependencies]
file-descriptors = "0.9.1"
num_cpus = "1.13.0"
pyo3 = "0.12.3"
tokio = { version = "0.3.2", features = ["sync", "time", "rt", "rt-multi-thread"] }
